# PhotonSim

./: .gitignore  CMakeLists.txt  OpticalPhotonDetector.cc  PROJECT_STRUCTURE.md  PhotonSim.cc  README.md  VISUALIZATION.md  example_visualization.py  investigate_parents.py  photon_comparison_analysis.py  requirements.txt  setup.sh  test_categories.mac  test_pions.mac  visualize_photons.py
include/: ActionInitialization.hh  DataManager.hh  DataManagerMessenger.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RandomSeedMessenger.hh  RooTrackerReader.hh  RunAction.hh  SimpleDataManager.hh  SteppingAction.hh
macros/: README.md  check_process_index.mac  debug_muon_processes.mac  elec_gun_fixed_energy_1000_MeV_all_photons.mac  elec_gun_uniform_energy_all_photons.mac  electrons_100_500MeV.mac  electrons_template.mac  list_processes.mac  muon_gun_fixed_energy_1000_MeV_all_photons.mac  muon_gun_fixed_energy_1050_MeV_all_photons.mac  muon_gun_fixed_energy_500_MeV_all_photons.mac  muon_gun_uniform_energy_all_photons.mac  muons_10_test.mac  muons_1k.mac  muons_1k_500MeV.mac  muons_1k_500MeV_histonly.mac  muons_1k_510MeV.mac  muons_1k_510MeV_histonly.mac  muons_300_1000MeV.mac  muons_50_with_photons.mac  muons_fixed_energy_template.mac  muons_random_energy_template.mac  quick_test.mac  test_commands.mac  test_fixed_energy.mac  test_muon.mac  test_processes.mac  test_random_energy.mac  test_wavelength_5_events.mac
macros/data_production_config/: dataprod_01_mu.json  dataprod_02_pi_plus.json  dataprod_03_e.json  dataprod_04_pi_minus.json  dataprod_05_pi0.json  dataprod_06_e_low_energy.json  dataprod_07_mu_pi_plus.json  dataprod_08_e_pi_plus.json  dataprod_09_e_pi0.json  dataprod_10_mu_pi_plus_pi0.json  dataprod_11_mu_pi_plus_pi_minus.json  dataprod_12_e_pi_plus_pi0.json  dataprod_low_energy_e.json  dataprod_neg_e_pos_pion.json  dataprod_neg_mu_2pos_pion.json  dataprod_neg_mu_pos_neg_pion.json  dataprod_neg_mu_pos_pion.json  dataprod_single_neg_e.json  dataprod_single_neg_mu.json  dataprod_single_neg_pi.json  dataprod_single_pi0.json  dataprod_single_pos_pi.json  example_lookup_single_energy.json  example_multiparticle.json  example_repeated_particles.json  monoenergetic_averaged.json  monoenergetic_event_by_event.json  multiparticle_uniform_lucid.json  (+8 more)
s3df_scripts/: DataProduction_README.md  DiffSimInputs_README.md  README.md  base_config.sh  user_paths.sh.template
scripts/: scan_siren_inputs.py  scan_smax.py
src/: ActionInitialization.cc  DataManager.cc  DataManagerMessenger.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RandomSeedMessenger.cc  RooTrackerReader.cc  RunAction.cc  SimpleDataManager.cc  SteppingAction.cc
tools/: README.md  benchmark_photonsim.py  create_multi_energy_3d_table.py  particle_comparison_benchmark.py  plot_2d_hists.py  visualize_benchmark.py
(+135 files in other folders)
